<resources>
    <string name="app_name">MyMovieCollection</string>
    <string name="top_rated_movie">Top Rated Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_title">Connection Error</string>
    <string name="refresh">Refresh</string>
    <string name="runtime">Runtime</string>
    <string name="movie_list">Movie List</string>
    <string name="tv_show_list">Tv Show List</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="_10">/10</string>
    <string name="production_companies">Production Companies</string>
    <string name="status">Status</string>
    <string name="overview">Overview</string>
    <string name="image_poster">Image Poster</string>
    <string name="icon">icon</string>
    <string name="detail_title">Detail Page</string>

</resources>
