<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailpage.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include layout="@layout/loading_layout"/>

        <include layout="@layout/connection_error_layout"/>



        <LinearLayout
            android:id="@+id/ln_container_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgWhite">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/image_poster"
                    android:src="@drawable/ic_photo_black_24dp"
                    android:layout_margin="8dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/imageView" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/title_size"
                    android:id="@+id/tv_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_callendar"
                    android:layout_below="@+id/tv_title"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:id="@+id/relase_date" />




                <TextView
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_genre"
                    android:layout_below="@id/relase_date"
                    android:layout_alignStart="@id/relase_date"
                    android:layout_marginTop="10dp"
                    android:id="@+id/genre" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genre"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_alignStart="@id/relase_date"
                    android:layout_marginTop="10dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_vote"
                        android:drawableStart="@drawable/ic_vote"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/_10"/>

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/bgWhite">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_overview"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/overview"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgGrey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/desc"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/bgWhite">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:drawableStart="@drawable/ic_status"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgGrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/bgWhite">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_company"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/production_companies"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgGrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/production_companies"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/bgWhite">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgGrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/runtimetxt"/>

            </LinearLayout>
        </LinearLayout>




    </LinearLayout>



</ScrollView>
